src/test/resources/invalid/shellSemanticErr/function/functionAssign.wacc
# tries to assign to a function

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

  int f() is
    return 3
  end
  
  f = 2
